<resources>
    <string name="app_name">Typecho</string>
    <string name="blog_address">博客网站(只需填写完整域名,并以"/"结尾)</string>
    <string name="blog_user_name">博客用户名</string>
    <string name="blog_user_pwd">博客密码</string>
    <string name="login_text">登录</string>
    <string name="null_url">博客网站不能为空</string>
    <string name="null_user_name">博客用户名不能为空</string>
    <string name="null_user_pwd">博客密码不能为空</string>
    <string name="load_failed">加载失败</string>
    <string name="login_success">登录成功</string>
    <string name="network_null">网络未连接,请检查网络</string>
    <string name="load_failed_url">请求失败,请检查网站地址是否正确</string>
    <string name="mine_text">我的</string>
    <string name="none_text" />
    <string name="setting_text">设置</string>
    <string name="article_text">文章</string>
    <string name="my_article_text">我的文章</string>
    <string name="my_page_text">页面</string>
    <string name="my_media_text">媒体</string>
    <string name="my_comment_text">评论</string>
    <string name="my_theme_text">主题</string>
    <string name="sure_text">确定</string>
    <string name="choose_theme_color">设置主题颜色</string>
    <string name="theme_green_text">原谅绿</string>
    <string name="theme_blue_text">二逼蓝</string>
    <string name="theme_purple_text">基佬紫</string>
    <string name="theme_yellow_text">土豪金</string>
    <string name="theme_red_text">姨妈红</string>
    <string name="theme_pink_text">软妹粉</string>
    <string name="theme_brown_text">泰迪棕</string>
    <string name="theme_black_text">炫酷黑</string>
    <string name="kindly_reminder">温馨提示</string>
    <string name="cancel_text">取消</string>
    <string name="choose_theme_color_text">是否确定使用 %1$s 作为主题色?</string>
    <string name="my_logout_text">退出登录</string>
    <string name="ask_logout_text">是否确定退出?</string>
    <string name="article_bottom_text">点击查看更多</string>
    <string name="glorious_recyclerview_loading_more">正在加载更多</string>
    <string name="glorious_recyclerview_load_more_failed">加载失败,点击重新加载</string>
    <string name="glorious_recyclerview_no_more_data">没有更多数据了</string>
    <string name="no_more_text">没有更多信息</string>
    <string name="load_failed_bottom">加载失败,点击重新加载</string>
    <string name="empty_data_text">没有数据哦</string>
    <string name="medial_list_title">我的媒体</string>
    <string name="image_pre_text">图片预览</string>
    <string name="save_text">保存</string>
    <string name="time_out">连接超时, 请检查网络</string>
    <string name="theme_blue_light_text">深邃蓝</string>
    <string name="theme_orange_text">欢乐橙</string>
    <string name="theme_gray_text">姥姥灰</string>
    <string name="theme_green_light_text">销魂绿</string>
    <string name="picture_path_text">图片已保存至%1$s</string>
    <string name="picture_save_failed">图片保存失败</string>
    <string name="sd_permission_fail">手机存储卡权限被拒绝, 将无法保存图片, 是否前往设置开启权限?</string>
    <string name="open_sd_failed">权限打开失败, 无法保存图片</string>
    <string name="net_error">连接失败, 请检查网络或网站地址是否正确</string>
    <string name="has_saved_picture">该图片已保存</string>
    <string name="wait_text">请稍候</string>
    <string name="service_error">请求失败，请稍后再试</string>
    <string name="data_failed">数据解析失败</string>
    <string name="uncomplete_login_data">信息输入不完整</string>
    <string name="blog_url_end">index.php/action/xmlrpc</string>
    <string name="load_error_with_code">请求失败, 错误码%1$s</string>
    <string name="load_failed_parameters">请求失败, 请检查参数是否正确</string>
    <string name="servie_error_with_code">服务器错误, 请检查网站地址是否正常,错误码%1$s</string>
    <string name="loading_text">正在加载中,请稍候...</string>
    <string name="action_save">保存</string>
    <string name="action_share">分享</string>
    <string name="action_helper">帮助</string>
    <string name="action_other_operate">其它</string>
    <string name="action_undo">撤销</string>
    <string name="action_redo">重置</string>
    <string name="action_preview">预览</string>
    <string name="action_edit">编辑</string>
    <string name="title_text">标题</string>
    <string name="content_text">内容</string>
    <string name="image_edit_error">图片处理失败</string>
    <string name="hint_input_horizontal_num">请输入行数</string>
    <string name="hint_input_vertical_num">请输入列数</string>
    <string name="insert_table_text">插入表格</string>
    <string name="hint_link_text">显示文本</string>
    <string name="link_text">链接</string>
    <string name="no_content">请输入内容</string>
    <string name="update_blog_success">更新成功</string>
    <string name="update_blog_fail">更新失败</string>
    <string name="updating">正在更新...</string>
    <string name="no_content_title">请输入文章标题和内容</string>
    <string name="submit_bloging">正在创建博客...</string>
    <string name="exit_twice_click">再按一次退出程序</string>
</resources>
